[package]
name = "rust_net"
version = "0.1.0"
edition = "2024"

[dependencies]
rsa    = "0.9"       # or latest
sha2   = "0.10"
hex    = "0.4"
chrono = "0.4.41"
secp256k1 = { version = "0.31.1", features = ["rand", "hashes"] }
sled = "0.34.7"
bip39 = { version = "2.2.0", features = ["rand"] }
iced = { version = "0.13.1", features = ["tokio", "wgpu"] }
copypasta = "0.10.2"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
libp2p = { version = "0.54", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.30"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
iced_futures = "0.13.2"
once_cell = "1.18"